# AV_Drone

./: .dockerignore  .gitignore  README.md  docker-compose.yml  start.sh  stop.sh
artifacts/2026-03-08_09-19-05_drone1/: metadata.json  metrics.csv  summary.json
artifacts/2026-03-08_09-34-50_drone1/: metadata.json  metrics.csv  summary.json
artifacts/2026-03-08_09-36-34_drone1/: metadata.json  metrics.csv  summary.json
artifacts/2026-03-08_10-46-13_drone1/: metadata.json  metrics.csv  summary.json
docker/ros/: Dockerfile  entrypoint.sh
docker/sim/: Dockerfile  entrypoint.sh
docs/: architecture.md  av_drone_analysis_site.html  change.md  command-reference.md  current_state_guide.html  docker-environment-spec.md  experiment_recording_policy.md  multi-drone-development-roadmap.md  portfolio-system-engineering-guide.md  problem.md  project_command_center.html  project_overview.html
docs/change/: 2026-03-24.md  2026-03-26.md  2026-03-27.md  2026-03-29.md  README.md
docs/error/: README.md  index.html
docs/evaluation_form/: 20260329_evaluation.html  20260329_report.html
docs/examples/: baseline_summary_example.json
docs/updates/: 2026-03-13.md  2026-03-19.md  2026-03-20.md  README.md
experiments/: README.md
scripts/: generate_artifact_plots.py  gz_scan_stdin_bridge.py  run_gz_scan_pipe_bridge.sh  run_host_gz_gui.sh  smoke_test_single_drone.sh  update_experiment_registry.py  wait_for_ros_node.py  wait_for_scan_sample.py
sim_assets/gz/gui/: gui.config
sim_assets/gz/models/x500_lidar/: model.config  model.sdf
sim_assets/gz/worlds/: obstacle_demo.sdf
sim_assets/models/rplidar/: model.sdf
sim_assets/worlds/: obstacle_demo.world
src/drone_bringup/: package.xml  setup.py
src/drone_bringup/config/: drone1_autonomy.yaml  mavros_config.yaml  scenario_single_drone_obstacle_demo.yaml
src/drone_bringup/launch/: single_drone_autonomy.launch.py
src/drone_control/: package.xml  setup.py
src/drone_control/drone_control/: autonomy_manager_node.py  vehicle_interface.py
src/drone_metrics/: package.xml  setup.cfg  setup.py
src/drone_metrics/drone_metrics/: metrics_logger_node.py
src/drone_metrics/resource/: drone_metrics
src/drone_perception/: package.xml  setup.py
src/drone_perception/drone_perception/: lidar_obstacle_node.py
src/drone_planning/: package.xml  setup.cfg  setup.py
src/drone_planning/drone_planning/: local_planner_node.py
src/drone_planning/resource/: drone_planning
src/drone_safety/: package.xml  setup.py
src/drone_safety/drone_safety/: safety_monitor_node.py
src/mppi/: package.xml  setup.py
src/mppi/config/: mavros_config.yaml  mavros_pluginlists.yaml
src/mppi/launch/: mppi.launch.py
src/mppi/mppi/: context.py  mppi_node.py
src/mppi/mppi/config/: gate_config.py
src/mppi/mppi/io/: mavros_io.py  takeoff_bridge.py
src/mppi/mppi/states/: base_state.py  hold_state.py  init_state.py  mppi_state.py  stable_state.py  takeoff_state.py
src/mppi/mppi/utils/: mppi_controller.py
src/mppi/resource/: mppi
src/offboard_control/: package.xml  setup.py
src/offboard_control/launch/: offboard_control.launch.py
src/offboard_control/offboard_control/: offboard_takeoff_node.py
src/ros_states/: README.md  app.py  architecture.html  history.html  package.xml  ros_monitor.py  run.sh  setup.cfg  setup.py
src/ros_states/launch/: ros_states.launch.py
src/ros_states/ros_states/: app.py  debug_report.py  ros_monitor.py
src/ros_states/templates/: index.html
