<?xml version="1.0"?>
<package format="3">
  <name>drone_bringup</name>
  <version>0.0.0</version>
  <description>Single-drone autonomy bringup package for MAVROS, planning, and perception.</description>
  <maintainer email="quddnr@todo.todo">quddnr</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>drone_control</exec_depend>
  <exec_depend>drone_metrics</exec_depend>
  <exec_depend>drone_perception</exec_depend>
  <exec_depend>drone_planning</exec_depend>
  <exec_depend>drone_safety</exec_depend>
  <exec_depend>mavros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
