<?xml version="1.0"?>
<package format="3">
  <name>drone_perception</name>
  <version>0.0.0</version>
  <description>Perception foundation package for obstacle sensing and preprocessing.</description>
  <maintainer email="quddnr@todo.todo">quddnr</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
