<?xml version="1.0"?>
<package format="3">
  <name>drone_planning</name>
  <version>0.0.0</version>
  <description>Planning foundation package for sensor-aware single and multi-drone autonomy.</description>
  <maintainer email="quddnr@todo.todo">quddnr</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
