<?xml version="1.0"?>
<package format="3">
  <name>mppi</name>
  <version>0.0.0</version>
  <description>Single-node MPPI offboard mission (takeoff->mppi->land) for PX4 via MAVROS2</description>
  <maintainer email="quddnr@todo.todo">quddnr</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
